--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
@@ -6,7 +6,7 @@
     </PropertyGroup>
 
     <PropertyGroup>
-        <Version>1.0.1.0</Version>
+        <Version>1.1.0.0</Version>
         <Authors>Ali Torabi</Authors>
         <RepositoryType>Git</RepositoryType>
         <Copyright>Copyright © Kalbood.ir</Copyright>
