--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
@@ -6,7 +6,7 @@
     </PropertyGroup>
 
     <PropertyGroup>
-        <Version>2.5.3.0</Version>
+        <Version>2.6.0.0</Version>
         <Authors>Ali Torabi</Authors>
         <PackageIcon>Logo.png</PackageIcon>
         <RepositoryType>Git</RepositoryType>
