Use of a much simpler setting class

--- a/Web/appsettings.Template.json
+++ b/Web/appsettings.Template.json
@@ -1,4 +1,4 @@
-﻿{
+{
     "ConnectionStrings": {
         "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB; Database=Kalbood; Integrated Security=true; MultipleActiveResultSets=true; TrustServerCertificate=True"
     },
@@ -18,7 +18,7 @@
         "Url": "Kalbood Url",
         "Logo": "Kalbood Logo",
         "Phone": "Kalbood Phone",
-        "Email": "Kalbood Email",
+        "Email": "info [at] Kalbood Email",
         "Whatsapp": "Kalbood Whatsapp",
         "Telegram": "Kalbood Telegram",
         "Instagram": "Kalbood Instagram",
