--- a/.editorconfig
+++ b/.editorconfig
@@ -15,14 +15,17 @@ root = true
 charset = utf-8
 indent_style = space
 trim_trailing_whitespace = true
+end_of_line = lf
 
 # XML project files
 [*.{csproj,vbproj,vcxproj,vcxproj.filters,proj,projitems,shproj}]
 indent_size = 2
+end_of_line = crlf
 
 # XML files
 [*.{props,targets,ruleset,config,nuspec,resx,vsixmanifest,vsct}]
 indent_size = 2
+end_of_line = crlf
 
 # JSON files
 [*.{json,json5,webmanifest}]
@@ -35,6 +38,7 @@ indent_size = 2
 # Code files
 [*.{cs,csx,vb,vbx}]
 indent_size = 4
+end_of_line = crlf
 
 ###############################
 # .NET Coding Conventions     #
